. [NEW] Texture: It is possible to use a subclass like MutableTexture without modifying the code
. [NEW-MAC] Added Mac templates
. [NEW-MAC] Added "flagsChanged" keyboard event
. [NEW-MAC] Added support for Fullscreen / window mode
. [NEW-MAC] Added support for AutoScale if the window is resized / fullscreen (EXPERIMENTAL)
. [FIX] All: Misc cleanups in the code
. [FIX] Camera: uses points intead of pixels. Works OK in RetinaDisplay mode (issue #1023)
. [FIX] CCArray: fixed possible crash
. [FIX] Configuration: checks for possible glErrors. Only ask for max samples if iOS >= 4 (issue #1041)
. [FIX] Director: Fixed possible memory leak when popping a scene.
. [FIX] FileUtils: loads .gz / .ccz files correctly in RetinaDisplay mode (issue #1037)
. [FIX] FileUtils: fixed big memory leaks on .ccz inflater
. [FIX] FileUtils: removes -hd suffix if the filename already has it (issue #1040)
. [FIX] Node: udpated doxygen strings regarding default anchorPoint (issue #1049)
. [FIX] Sprite: updateTransform can be overriden (issue #824)
. [FIX] Sprite: Assert if an sprite initialized with a batchnode and it is not using it (issue #1053)
. [FIX] Sprite: correctly overrides setIsRelativeAnchorPoint (issue #1055)
. [FIX] SpriteFrameCache: textureFileName is relative to path (issue #1044)
. [FIX] Particles: QuadParticle uses Points (issue #1057)
. [FIX] Templates: removeStartup compiles (issue #1059)
. [FIX] Texture: PVR with non-square mipmaps generates a warning log in debug mode (issue #1052)
. [FIX-MAC] Display Link thread: async images works as expected. Enabled by default.
. [FIX-MAC] MacGLView: VSync is enabled when the view is loaded from the NIB
. [TEST] Added Glyph Designer test case
. [TEST] Added LayerGradient test
. [TEST-MAC] Added cocos2d icon to Mac tests
. [TEST-MAC] Added EventTest
. [3RD] Chipmunk: Updated to v5.3.4
. [3RD] libpng: don't compile pngtest.c (issue #1058)

 
version 0.99.5-rc1 - 15-Nov-2010