@@ -9,6 +9,7 @@ version 0.99.5 - xx-Dec-2010
 . [NEW-MAC] Added support for Fullscreen / window mode
 . [NEW-MAC] Added support for AutoScale if the window is resized / fullscreen (EXPERIMENTAL)
 . [FIX] All: Misc cleanups in the code
+. [FIX] Action: Blink restores doesn't set as invisible the frame when the action is done (issue #1061)
 . [FIX] Camera: uses points intead of pixels. Works OK in RetinaDisplay mode (issue #1023)
 . [FIX] CCArray: fixed possible crash
 . [FIX] Configuration: checks for possible glErrors. Only ask for max samples if iOS >= 4 (issue #1041)
